--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>NPW</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="imag/3987.gif"
+  <link rel="icon" href="imag/3987.gif">
+  
 </head>
 
 <body>
